tests/__snapshots__/api-toAcceptProps-overloaded-components-stderr.snap.txt
Error: Component accepts props of the given type.

  32 |   test("accepts props of the given type", () => {
  33 |     expect(OverloadFunction).type.toAcceptProps({});
  34 |     expect(OverloadFunction).type.not.toAcceptProps({}); // fail
     |                                       ~~~~~~~~~~~~~
  35 | 
  36 |     expect(OverloadFunction).type.toAcceptProps({ one: "sample", two: 123 });
  37 |     expect(OverloadFunction).type.not.toAcceptProps({ one: "sample", two: 123 }); // fail

       at ./__typetests__/overloaded-components.tst.tsx:34:39 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  35 | 
  36 |     expect(OverloadFunction).type.toAcceptProps({ one: "sample", two: 123 });
  37 |     expect(OverloadFunction).type.not.toAcceptProps({ one: "sample", two: 123 }); // fail
     |                                       ~~~~~~~~~~~~~
  38 |   });
  39 | 
  40 |   test("property does not exist in props type", () => {

       at ./__typetests__/overloaded-components.tst.tsx:37:39 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  39 | 
  40 |   test("property does not exist in props type", () => {
  41 |     expect(OverloadFunction).type.not.toAcceptProps({ enable: true });
     |                                       ~~~~~~~~~~~~~
  42 |     expect(OverloadFunction).type.toAcceptProps({ enable: true }); // fail
  43 |   });
  44 | 

       at ./__typetests__/overloaded-components.tst.tsx:41:39 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

No overload matches this call.
Overload 1 of 2, '(props: FirstProps): Element', gave the following error.
Type '{ enable: boolean; }' is not assignable to type 'IntrinsicAttributes & AnchorHTMLAttributes<HTMLAnchorElement> & { one: string; two: number | undefined; three?: boolean | undefined; }'.
Property 'enable' does not exist on type 'IntrinsicAttributes & AnchorHTMLAttributes<HTMLAnchorElement> & { one: string; two: number | undefined; three?: boolean | undefined; }'.
Overload 2 of 2, '(props: SecondProps): Element', gave the following error.
Type '{ enable: boolean; }' is not assignable to type 'IntrinsicAttributes & ButtonHTMLAttributes<HTMLButtonElement> & { one?: undefined; }'.
Property 'enable' does not exist on type 'IntrinsicAttributes & ButtonHTMLAttributes<HTMLButtonElement> & { one?: undefined; }'.

  40 |   test("property does not exist in props type", () => {
  41 |     expect(OverloadFunction).type.not.toAcceptProps({ enable: true });
  42 |     expect(OverloadFunction).type.toAcceptProps({ enable: true }); // fail
     |                                   ~~~~~~~~~~~~~
  43 |   });
  44 | 
  45 |   test("property type is not assignable to prop type", () => {

       at ./__typetests__/overloaded-components.tst.tsx:42:35 ❭ when source is a function component ❭ property does not exist in props type

Error: Component accepts props of the given type.

  44 | 
  45 |   test("property type is not assignable to prop type", () => {
  46 |     expect(OverloadFunction).type.not.toAcceptProps({ one: true });
     |                                       ~~~~~~~~~~~~~
  47 |     expect(OverloadFunction).type.toAcceptProps({ one: true }); // fail
  48 |   });
  49 | });

       at ./__typetests__/overloaded-components.tst.tsx:46:39 ❭ when source is a function component ❭ property type is not assignable to prop type

Error: Component does not accept props of the given type.

No overload matches this call.
Overload 1 of 2, '(props: FirstProps): Element', gave the following error.
Type 'boolean' is not assignable to type 'string'.
Overload 2 of 2, '(props: SecondProps): Element', gave the following error.
Type 'true' is not assignable to type 'undefined'.

  45 |   test("property type is not assignable to prop type", () => {
  46 |     expect(OverloadFunction).type.not.toAcceptProps({ one: true });
  47 |     expect(OverloadFunction).type.toAcceptProps({ one: true }); // fail
     |                                   ~~~~~~~~~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/overloaded-components.tst.tsx:47:35 ❭ when source is a function component ❭ property type is not assignable to prop type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & AnchorHTMLAttributes<HTMLAnchorElement> & { one: string; two: number | undefined; three?: boolean | undefined; }' ts(6500)

      3 | 
      4 | type FirstProps = React.AnchorHTMLAttributes<HTMLAnchorElement> & {
      5 |   one: string;
        |   ~~~
      6 |   two: number | undefined;
      7 |   three?: boolean;
      8 | };

          at ./__typetests__/overloaded-components.tst.tsx:5:3

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & ButtonHTMLAttributes<HTMLButtonElement> & { one?: undefined; }' ts(6500)

       9 | 
      10 | type SecondProps = React.ButtonHTMLAttributes<HTMLButtonElement> & {
      11 |   one?: undefined;
         |   ~~~
      12 | };
      13 | 
      14 | interface Overload {

           at ./__typetests__/overloaded-components.tst.tsx:11:3

Error: Component type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  51 | describe("when source is a type", () => {
  52 |   test("accepts props of the given type", () => {
  53 |     expect<Overload>().type.toAcceptProps({});
     |                             ~~~~~~~~~~~~~
  54 |     expect<Overload>().type.not.toAcceptProps({}); // fail
  55 | 
  56 |     expect<Overload>().type.toAcceptProps({ one: "sample", two: 123 });

       at ./__typetests__/overloaded-components.tst.tsx:53:29 ❭ when source is a type ❭ accepts props of the given type

Error: Component type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  54 |     expect<Overload>().type.not.toAcceptProps({}); // fail
  55 | 
  56 |     expect<Overload>().type.toAcceptProps({ one: "sample", two: 123 });
     |                             ~~~~~~~~~~~~~
  57 |     expect<Overload>().type.not.toAcceptProps({ one: "sample", two: 123 }); // fail
  58 |   });
  59 | 

       at ./__typetests__/overloaded-components.tst.tsx:56:29 ❭ when source is a type ❭ accepts props of the given type

Error: Component type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  54 |     expect<Overload>().type.not.toAcceptProps({}); // fail
  55 | 
  56 |     expect<Overload>().type.toAcceptProps({ one: "sample", two: 123 });
     |                             ~~~~~~~~~~~~~
  57 |     expect<Overload>().type.not.toAcceptProps({ one: "sample", two: 123 }); // fail
  58 |   });
  59 | 

       at ./__typetests__/overloaded-components.tst.tsx:56:29 ❭ when source is a type ❭ accepts props of the given type

Error: Component type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  54 |     expect<Overload>().type.not.toAcceptProps({}); // fail
  55 | 
  56 |     expect<Overload>().type.toAcceptProps({ one: "sample", two: 123 });
     |                        ~~
  57 |     expect<Overload>().type.not.toAcceptProps({ one: "sample", two: 123 }); // fail
  58 |   });
  59 | 

       at ./__typetests__/overloaded-components.tst.tsx:56:24 ❭ when source is a type ❭ accepts props of the given type

Error: Component type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  60 |   test("property does not exist in props type", () => {
  61 |     expect<Overload>().type.not.toAcceptProps({ enable: true });
  62 |     expect<Overload>().type.toAcceptProps({ enable: true }); // fail
     |                             ~~~~~~~~~~~~~
  63 |   });
  64 | 
  65 |   test("property type is not assignable to prop type", () => {

       at ./__typetests__/overloaded-components.tst.tsx:62:29 ❭ when source is a type ❭ property does not exist in props type

Error: Component type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  60 |   test("property does not exist in props type", () => {
  61 |     expect<Overload>().type.not.toAcceptProps({ enable: true });
  62 |     expect<Overload>().type.toAcceptProps({ enable: true }); // fail
     |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  63 |   });
  64 | 
  65 |   test("property type is not assignable to prop type", () => {

       at ./__typetests__/overloaded-components.tst.tsx:62:6 ❭ when source is a type ❭ property does not exist in props type

Error: Component type accepts props of the given type.

  64 | 
  65 |   test("property type is not assignable to prop type", () => {
  66 |     expect<Overload>().type.not.toAcceptProps({ one: true });
     |                                 ~~~~~~~~~~~~~
  67 |     expect<Overload>().type.toAcceptProps({ one: true }); // fail
  68 |   });
  69 | });

       at ./__typetests__/overloaded-components.tst.tsx:66:33 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Component type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  65 |   test("property type is not assignable to prop type", () => {
  66 |     expect<Overload>().type.not.toAcceptProps({ one: true });
  67 |     expect<Overload>().type.toAcceptProps({ one: true }); // fail
     |                             ~~~~~~~~~~~~~
  68 |   });
  69 | });
  70 | 

       at ./__typetests__/overloaded-components.tst.tsx:67:29 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Component type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  65 |   test("property type is not assignable to prop type", () => {
  66 |     expect<Overload>().type.not.toAcceptProps({ one: true });
  67 |     expect<Overload>().type.toAcceptProps({ one: true }); // fail
     |                             ~~~~~~~~~~~~~
  68 |   });
  69 | });
  70 | 

       at ./__typetests__/overloaded-components.tst.tsx:67:29 ❭ when source is a type ❭ property type is not assignable to prop type

